began working on flexbox for portfolio

--- a/index.html
+++ b/index.html
@@ -20,16 +20,21 @@
             <h2>About Me</h2>
             <p>I am a full stack developer based in North Carolina.</p>
         </section>
+
         <section id="work" class="card">
-            <h2>Recent Works</h2>
-            <ul id="work-list">
-                <li>
-                    <a href="https://princepszortch.itch.io/forestkeeper" target="_blank">
-                        <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
-                        <h3 id="forest-keeper">Forest Keeper</h3>
-                    </a>
-                </li>
-            </ul>
+            <section class="work-list">
+
+                <a href="https://princepszortch.itch.io/forestkeeper" target="_blank" class= "ex">
+                    <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
+                    <h3 id="forest-keeper">Forest Keeper</h3>
+                </a>
+
+                <a href="#" class="ex">
+                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                    <h3>Placeholder</h3>
+                </a>
+
+            </section>
         </section>
         <section id="contact" class="card">
             <h2>Contact Me</h2>
