organized flexbox for portfolio

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </section>
 
         <section id="work" class="card">
+            <h2>My Work</h2>
             <section class="work-list">
 
                 <a href="https://princepszortch.itch.io/forestkeeper" target="_blank" class= "ex">
@@ -29,6 +30,18 @@
                     <h3 id="forest-keeper">Forest Keeper</h3>
                 </a>
 
+                <a href="#" class="ex">
+                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                    <h3>Placeholder</h3>
+                </a>
+                <a href="#" class="ex">
+                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                    <h3>Placeholder</h3>
+                </a>
+                <a href="#" class="ex">
+                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                    <h3>Placeholder</h3>
+                </a>
                 <a href="#" class="ex">
                     <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
                     <h3>Placeholder</h3>
