--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <header>
-        <img src="./assets/images/headshot.jpg" alt="A professional headshot of Olivia Te Kolste.">
+        <br>
         <h1>Olivia Te Kolste</h1>
         <ul>
             <li> <a href="#about">ABOUT</a></li>
@@ -16,12 +16,12 @@
     </header>
 
     <body>
-        <section id="about" class="card">
+        <section id="about" class="infoblock">
             <h2>About Me</h2>
             <p>I am a full stack developer based in North Carolina.</p>
         </section>
 
-        <section id="work" class="card">
+        <section id="work" class="infoblock">
             <h2>My Work</h2>
             <section class="work-list">
 
@@ -49,7 +49,7 @@
 
             </section>
         </section>
-        <section id="contact" class="card">
+        <section id="contact" class="infoblock">
             <h2>Contact Me</h2>
             <p>
                 Email: oliviatekolste@gmail.com
