added hero, reset sheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Olivia Te Kolste - Web Developer</title>
+        <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/style.css">
         
     </head>
@@ -16,6 +17,9 @@
     </header>
 
     <body>
+
+        <section class="hero"></section>
+
         <section id="about" class="infoblock">
             <h2>About Me</h2>
             <p>I am a full stack developer based in North Carolina.</p>
