fixed flexbox for portfolio

--- a/index.html
+++ b/index.html
@@ -29,30 +29,37 @@
             <h2>My Work</h2>
             <section class="work-list">
 
-                <a href="https://princepszortch.itch.io/forestkeeper" target="_blank" class= "ex">
-                    <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
-                    <h3 id="forest-keeper">Forest Keeper</h3>
-                </a>
-
-                <a href="#" class="ex">
-                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                    <h3>Placeholder</h3>
-                </a>
-                <a href="#" class="ex">
-                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                    <h3>Placeholder</h3>
-                </a>
-                <a href="#" class="ex">
-                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                    <h3>Placeholder</h3>
-                </a>
-                <a href="#" class="ex">
-                    <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                    <h3>Placeholder</h3>
-                </a>
-
+                <section class="ex" id="prime">
+                    <a href="https://princepszortch.itch.io/forestkeeper" target="_blank">
+                        <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
+                        <h3 id="forest-keeper">Forest Keeper</h3>
+                    </a>
+                </section>
+                <section class="ex">
+                    <a href="#" >
+                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                        <h3>Placeholder</h3>
+                    </a>
+                </section>
+                <section class="ex">
+                    <a href="#">
+                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                        <h3>Placeholder</h3>
+                    </a>
+                </section>
+                <section class="ex">     
+                    <a href="#" >
+                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                        <h3>Placeholder</h3>
+                </section>
+                <section class="ex">     
+                    <a href="#">
+                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                        <h3>Placeholder</h3>
+                </section>
             </section>
         </section>
+        <br>
         <section id="contact" class="infoblock">
             <h2>Contact Me</h2>
             <p>
