set up flexbox in other sections, added media query for responsiveness

--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Olivia Te Kolste - Web Developer</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/style.css">
         
     </head>
 
     <header>
-        <br>
         <h1>Olivia Te Kolste</h1>
-        <ul>
-            <li> <a href="#about">ABOUT</a></li>
-            <li> <a href="#work">MY WORK</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-        </ul>
     </header>
+
+    <nav>
+        <a href="#about">ABOUT</a>
+        <a href="#work">MY WORK</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
+
+    <section class="hero"></section>
 
     <body>
 
-        <section class="hero"></section>
 
         <section id="about" class="infoblock">
-            <h2>About Me</h2>
-            <p>I am a full stack developer based in North Carolina.</p>
+            <p>I am a full stack developer based in North Carolina. I have a Bachelor of Arts in computer science, and I have experience in Python, Java, and C# for Unity.</p>
         </section>
 
         <section id="work" class="infoblock">
-            <h2>My Work</h2>
             <section class="work-list">
-
                 <section class="ex" id="prime">
                     <a href="https://princepszortch.itch.io/forestkeeper" target="_blank">
                         <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
@@ -61,10 +62,9 @@
         </section>
         <br>
         <section id="contact" class="infoblock">
-            <h2>Contact Me</h2>
-            <p>
-                Email: oliviatekolste@gmail.com
-            </p>
+                <p>
+                    Email: oliviatekolste@gmail.com
+                </p>
         </section>
     </body>
 
