fixed media queries

--- a/index.html
+++ b/index.html
@@ -23,49 +23,58 @@
 
     <body>
 
-
-        <section id="about" class="infoblock">
-            <p>I am a full stack developer based in North Carolina. I have a Bachelor of Arts in computer science, and I have experience in Python, Java, and C# for Unity.</p>
-        </section>
-
-        <section id="work" class="infoblock">
-            <section class="work-list">
-                <section class="ex" id="prime">
-                    <a href="https://princepszortch.itch.io/forestkeeper" target="_blank">
-                        <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
-                        <h3 id="forest-keeper">Forest Keeper</h3>
-                    </a>
-                </section>
-                <section class="ex">
-                    <a href="#" >
-                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                        <h3>Placeholder</h3>
-                    </a>
-                </section>
-                <section class="ex">
-                    <a href="#">
-                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                        <h3>Placeholder</h3>
-                    </a>
-                </section>
-                <section class="ex">     
-                    <a href="#" >
-                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                        <h3>Placeholder</h3>
-                </section>
-                <section class="ex">     
-                    <a href="#">
-                        <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
-                        <h3>Placeholder</h3>
+        <section class="blocks-wrapper">
+            <section id="about" class="infoblock">
+                <h2>About Me</h2>
+                <section class="contents">
+                    <p>I am a full stack developer based in North Carolina. I have a Bachelor of Arts in computer science, and I have experience in Python, Java, and C# for Unity.</p>
                 </section>
             </section>
-        </section>
-        <br>
-        <section id="contact" class="infoblock">
-                <p>
-                    Email: oliviatekolste@gmail.com
-                </p>
-        </section>
+
+            <section id="work" class="infoblock">
+                <h2>My Work</h2>
+                <section class="work-list contents">
+                    <section class="ex" id="prime">
+                        <a href="https://princepszortch.itch.io/forestkeeper" target="_blank">
+                            <img src="./assets/images/forestkeeper-icon.png" alt="A cartoon bug standing in grass, holding a stick." id="forest-keeper">
+                            <h3 id="forest-keeper">Forest Keeper</h3>
+                        </a>
+                    </section>
+                    <section class="ex">
+                        <a href="#" >
+                            <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                            <h3>Placeholder</h3>
+                        </a>
+                    </section>
+                    <section class="ex">
+                        <a href="#">
+                            <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                            <h3>Placeholder</h3>
+                        </a>
+                    </section>
+                    <section class="ex">     
+                        <a href="#" >
+                            <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                            <h3>Placeholder</h3>
+                    </section>
+                    <section class="ex">     
+                        <a href="#">
+                            <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
+                            <h3>Placeholder</h3>
+                        </a>
+                    </section>
+                </section>
+            </section>
+            <br>
+            <section id="contact" class="infoblock">
+                <h2>Contact Me</h2>
+                <section class="contents">
+                    <p>
+                        Email: oliviatekolste@gmail.com
+                    </p>
+                </section>
+            </section>
+    </section>
     </body>
 
 </html>
