--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Olivia Te Kolste - Web Developer</title>
         <meta charset="UTF-8" />
@@ -56,6 +56,7 @@
                         <a href="#" >
                             <img src="./assets/images/coming-soon.jpg" alt="Coming soon">
                             <h3>Placeholder</h3>
+                        </a>    
                     </section>
                     <section class="ex">     
                         <a href="#">
@@ -69,9 +70,12 @@
             <section id="contact" class="infoblock">
                 <h2>Contact Me</h2>
                 <section class="contents">
-                    <p>
-                        Email: oliviatekolste@gmail.com
-                    </p>
+                    <h3>
+                        oliviatekolste@gmail.com
+                    </h3>
+                    <h3>
+                        <a href="https://github.com/otekolste" target="_blank">Github</a>
+                    </h3>
                 </section>
             </section>
     </section>
