cleaned up comments, fixed about me

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <section id="about" class="infoblock">
                 <h2>About Me</h2>
                 <section class="contents">
-                    <p>I am a full stack developer based in North Carolina. I have a Bachelor of Arts in computer science, and I have experience in Python, Java, and C# for Unity.</p>
+                    <img src="./assets/images/headshot.jpg" alt="A headshot of Olivia">
+                    <p>Hello world! I am a full stack developer based in North Carolina, with experience in a breadth of languages, including Python, Java, and C# for Unity; presently, I am learning CSS, HTML, and Javascript. I am adept at working with cross-functional teams and utilizing agile development techniques to deliver high-quality projects in a timely manner.
+                        I have an eye for detail and a strong commitment to making applications user-friendly and intuitive to use. 
+                    </p>
                 </section>
             </section>
 
