updated README, added comments

--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
     <header>
         <h1>Olivia Te Kolste</h1>
     </header>
-
+<!-- NAVIGATION BAR -->
     <nav>
         <a href="#about">ABOUT</a>
         <a href="#work">MY WORK</a>
         <a href="#contact">CONTACT</a>
     </nav>
 
+<!-- HERO -->
+
     <section class="hero"></section>
 
     <body>
 
+<!-- MAIN CONTENTS -->
+
         <section class="blocks-wrapper">
-            <section id="about" class="infoblock">
+            <section id="about" class="infoblock"> <!-- ABOUT ME SECTION -->
                 <h2>About Me</h2>
                 <section class="contents">
                     <img src="./assets/images/headshot.jpg" alt="A headshot of Olivia">
@@ -33,8 +37,8 @@
                     </p>
                 </section>
             </section>
+            <section id="work" class="infoblock"> <!-- PORTFOLIO SECTION -->
 
-            <section id="work" class="infoblock">
                 <h2>My Work</h2>
                 <section class="work-list contents">
                     <section class="ex" id="prime">
@@ -70,7 +74,7 @@
                 </section>
             </section>
             <br>
-            <section id="contact" class="infoblock">
+            <section id="contact" class="infoblock"> <!-- CONTACT ME SECTION -->
                 <h2>Contact Me</h2>
                 <section class="contents">
                     <h3>
